--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                     </div>
                     <h4 class="xs-title"><a href="">More Secured</a></h4>
                     <p>More secured by our team that will keep an eye on your server!</p>
-                    <a href="#" class="simple-btn">Read More</a>
+                    <a href="#" class="simple-btn"></a>
                 </div><!-- .xs-service-block END -->
             </div>
             <div class="col-lg-4 col-md-6">
