--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row align-items-center">
             <div class="xs-logo-wraper">
                 <a href="index.html" class="xs-logo">
-                    <img src="assets/images/logo.png" alt="">
+                    <img src="assets/images/logo (1).png" alt="">
                 </a>
             </div>
             <nav class="xs-menus ml-auto">
